css/style.css
/****** General ***********/
* {
    font-family: 'Raleway', sans-serif;
}

:root {
    --main-color: #0065FC;
    --main-bg-color: #F2F2F2;
    --filter-bg-color: #DEEBFF;
}

.fa-solid,
.fa-regular {
    color: var(--main-color);
}

body {
    display: flex;
    justify-content: center;
    margin: 0;
    max-width: 1440px;
    margin: auto;
}

.main-container {
    width: 100%;
    padding: 0 50px;
    box-sizing: border-box;
}

header {
    display: flex;
    justify-content: space-between;
    padding-top: 19px;
}

.logo {
    width: 61px;
    margin-top: 10px;
}

.menu {
    list-style-type: none;
    margin: 0;
    padding: 0;
}

.menu1 {
    color: blue
}


.menu-item {
    display: inline;
}


.menu-item a {
    text-decoration: none;
    color: black;
    margin-left: 50px;
    padding-top: 15px;
}

.menu-item a:hover {
    color: #0065FC;
    border-top: 2px solid #0065FC;
}

h1 {
    margin-bottom: 10px;
    font-size: 25px;
    margin-top: 45px;
}

.tagline {
    margin-top: 0;
}

.search-bar {
    display: flex;
    height: 49px;
    width: 377px;
}


.map-pin {
    display: flex;
    justify-content: center;
    align-items: center;
    border-radius: 15px 0 0 15px;
    background-color: #F2F2F2;
    width: 49px;
}

.map-pin i {
    color: black;
    font-size: 18px;
}

.search-box {
    font-size: 18px;
    font-weight: 700;
    padding-left: 25px;
    width: 170px;
    border: 1px solid #F2F2F2;
    border-right: none;
}

.search-button {
    display: flex;
    justify-content: center;
    border-radius: 0px 15px 15px 0;
    background-color: #0065FC;
    color: white;
    font-size: 18px;
    font-weight: 700;
    width: 93px;
    border: none;
}

.filters {
    display: flex;
    padding-top: 25px;
    padding-bottom: 25px;
    gap: 25px;
    align-items: center;
}

.filters h2 {
    margin: 0;
}

.button-container {
    display: flex;
    gap: 25px;
}

.button-container button {
    border-radius: 25px;
    height: 50px;
    font-size: 17px;
    font-weight: 700;
    padding-left: 20px;
    padding-right: 20px;
    background-color: white;
    border: 3px solid #d9d9d9;
    align-items: center;
    display: flex;
    gap: 10px;
}

.button-container button:hover {
    background-color: #DEEBFF;
}

.info {
    background-color: white;
    border-color: #DEEBFF;
    display: flex;
    gap: 10px;
    align-items: center;
    padding-bottom: 30px;
}

.info i {
    font-size: 10px;
    width: 20px;
    height: 20px;
    border: 3px solid #d9d9d9;
    border-radius: 50%;
    display: flex;
    justify-content: center;
    align-items: center;
}

/* .button-container :hover {
    color: #0065FC;
    display: flex;
    justify-content: center;
    border-radius: 0px 15px 15px 0;
    background-color: white;
    color: #0065FC;
    border-color: D9D9D9;
    padding-top: 25px;
    padding-bottom: 25px;
    font-size: 25px;
    font-weight: 700;
    padding-left: 10px;
} */
.accommodation-cards {
    display: flex;
    gap: 25px;
    flex-wrap: wrap;
    justify-content: space-between;
    padding-top: 25px;
}

.accommodation-cards .card {
    width: 240px;
    height: 207px;
}

.accommodation-cards .card img {
    width: 100%;
    height: 124px;
    border-radius: 20px 20px 0px 0px;
}

.accommodation-cards .card-text {
    display: flex;
    flex-direction: column;
    gap: 10px;
}

.accommodation-cards .card-title {
    margin: 0;
}

.accommodation-cards .card-subtitle {
    margin: 0;
}

.section-title {
    margin: 0;
    font-size: 22px;
}

.card {
    background-color: white;
    border-radius: 20px;
    padding: 5px;
    filter: drop-shadow(0px 3px 15px rgba(0, 0, 0, 0.1));
}

.card img {
    object-fit: cover;
}

.card-title {
    font-size: 16px;
}

.currency {
    font-weight: 700;
}

.neutral-star {
    color: var(--main-bg-color)
}

/****** Accommodation And Popular ***********/
.accommodation-and-popular {
    display: flex;
    justify-content: space-between;
}

.accommodation-and-popular section {
    background-color: var(--main-bg-color);
    border-radius: 20px;
    padding: 30px;
    box-sizing: border-box;
}

/****** Accommodation ***********/
.accommodation {
    width: 65%;
}

.show-more {
    /* TODO style link */
}

/****** Popular ***********/
.popular {
    width: 32%;
}

.popular-title {
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.popular-cards .card {
    display: flex;
    margin-top: 33px;
}

.popular-cards img {
    width: 33%;
    height: 136px;
    border-top-left-radius: 20px;
    border-bottom-left-radius: 20px;
}

.popular-cards .card-content {
    width: 67%;
    padding-left: 15px;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    box-sizing: border-box;
}

.popular-cards .card-title {
    margin-top: 10px;
    margin-bottom: 4px;
}

.popular-cards .card-subtitle {
    margin: 0;
}

.popular-cards .card-rating {
    margin-bottom: 5px;
}

.show-more {
    display: block;
    color: black;
    padding-top: 30px;
    font-weight: bold;
    text-decoration: none;
}

.things-to-do {
    padding: 30px;
}

.things-to-do-cards {
    display: flex;
    justify-content: space-between;
    align-content: center;
    flex-wrap: wrap;
}

.things-to-do-cards .card {
    width: 297px;
    height: 439px;
    border-radius: 20px;
    padding: 0;
}

.things-to-do-cards .card img {
    width: 100%;
    height: 380px;
    border-radius: 20px 20px 0px 0px;
}

footer {
    background-color: #F2F2F2;
    display: flex;
    padding: 25px;
}

.footer-column {
    flex: 1;
    font-size: small;
}

footer h2 {
    font-size: 18px;
    margin-top: 0;
}

footer ul {
    display: flex;
    flex-direction: column;
    gap: 15px;
    list-style-type: none;
    margin: 0;
    padding: 0;
}

footer a {
    font-size: 16px;
    color: black;
    text-decoration: none;
}


/* When the browser is at least 600px and above */
@media screen and (max-width: 1024px) {
    footer {
        background-color: red;
      /* Apply some styles */
    }
  }

